# SparseRNNs

./: CONTRIBUTING.md  LICENSE  README.md  fp_inference_simple.py  fxp_inference.py  fxp_inference_simple.py  fxp_inference_simple_fp.py  main.py  notebook.ipynb  pyproject.toml  sigmoid.py
.github/workflows/: scorecard.yml
recipes/: ndns.json
sparseRNNs/: convert.py  fxparray.py  fxparray_np.py  fxpmodel.py  fxpmodel_np.py  fxpreporter.py  fxprun.py  fxputils.py  train.py  train_helpers.py
sparseRNNs/dataloaders/: __init__.py  base.py  basic.py  dataloading.py
sparseRNNs/dataloaders/NDNS/: dnsmos.py  ndns.py  si_snr_jax_vs_pytorch.py  stft_jax_vs_pytorch.py
sparseRNNs/model/: layers.py  seq_model.py  seq_model_np.py  ssm.py  ssm_init.py  ssm_np.py
sparseRNNs/utils/: logging.py  logging_np.py  pruning.py  quantization.py  quantization_np.py
